--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel/framework": "^5.6 || ^6.0",
+        "laravel/framework": "^6.0||^7.0",
         "subit/php-expo-sdk": "1.0.*"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "~5.4||~5.7||~6.0||^7.0",
-        "orchestra/testbench": "~3.3||~4.0"
+        "mockery/mockery": "^1.3",
+        "phpunit/phpunit": "^8.0",
+        "orchestra/testbench": "^5.0"
     },
     "autoload": {
         "psr-4": {
