--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "ext-json": "^7.4",
-        "laravel/framework": "^6.0||^7.0",
+        "php": ">=7.4",
+        "ext-json": ">=7.4",
+        "laravel/framework": "^6.0||^7.0||^8.0",
         "subit/php-expo-sdk": "2.0.*"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
-        "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "^5.0"
+        "phpunit/phpunit": "9.5.0",
+        "orchestra/testbench": "^6.3"
     },
     "autoload": {
         "psr-4": {
