Support Laravels standard retry functionality if a network error occured. Be aware: NotificationFailed where considerRetrying is true might make more sense to check in failed_jobs instead depending on your use case. Also minor changes

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": ">=7.4",
         "ext-json": ">=7.4",
         "laravel/framework": "^6.0||^7.0||^8.0",
-        "subit/php-expo-sdk": "2.0.*"
+        "subit/php-expo-sdk": "^2.1.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
